try to use ProcessBuilder